--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -31,7 +31,7 @@
   text-decoration: underline;
 }
 
-.cart-closed {
+.cart-closed .ball-cart-icon {
   position: fixed;
   top: 2%;
   right: 1%;
@@ -44,12 +44,12 @@
   height: 50px;
 }
 
-.cart-closed:hover {
+.ball-cart-icon:hover {
   transform: rotate(8deg);
 }
 
 .cart img {
-  width: 70px;
+  width: 80px;
   margin-right: 1rem;
 }
 
@@ -57,6 +57,11 @@
   width: 50px;
   padding: 0;
   margin: 0 .5rem 1rem 0;
+}
+.ball-cart-icon {
+  width: 70px;
+  height: 60;
+  /* vertical-align: middle; */
 }
 
 @media screen and (max-width: 768px) {
