--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   --primary: #222224;
   --secondary: #ee1515;
   --tertiary: #f00000;
-  --light: #f0f0f0;
+  --light: #66ccff;
   --dark: #222224;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
